<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detailViewModel"
            type="com.android.movie.view.movieDetails.MovieDetailFragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/black"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:id="@+id/expandedImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_dropdown"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <ImageView
                            android:id="@+id/back_btn"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/back_btn_bg"
                            android:contentDescription="@string/back_button"
                            android:padding="8dp"
                            android:tint="@color/black"
                            android:src="@drawable/back_50px" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/favorite" />
                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_margin="8dp"
                        android:textColor="@color/white"
                        android:layout_toStartOf="@id/rating"
                        android:textSize="30sp"
                        tools:text="Moonlight" />

                    <RatingBar
                        android:id="@+id/rating"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:numStars="5"
                        android:progressTint="@color/colorAccent"
                        android:stepSize="0.5" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textColor="@color/white"
                    tools:text="" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/rate_bg"
                        android:padding="8dp"
                        android:text="@string/released" />

                    <ImageView
                        android:id="@+id/tweet"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:layout_toStartOf="@id/star_button"
                        android:background="@drawable/rate_bg"
                        android:contentDescription="@string/tweet"
                        android:padding="8dp"
                        android:src="@drawable/twitter_50px"
                        android:tint="@color/black"
                        android:text="@string/rate_movie"
                        android:textColor="@color/white" />

                    <com.like.LikeButton
                        android:id="@+id/star_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:background="@drawable/rate_bg"
                        app:circle_end_color="@color/colorAccent"
                        app:circle_start_color="@color/black"
                        app:dots_primary_color="@color/colorAccent"
                        app:dots_secondary_color="@color/black"
                        app:icon_size="24dp"
                        app:icon_type="star" />

                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
